<resources>
    <string name="app_name">Eventium</string>
    <string name="toolbar_title">Eventium</string>
    <string name="toolbar_users">Usuarios</string>
    <string name="toolbar_calendario">Calendario</string>
    <string name="toolbar_saldo">Saldo</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_drawer_home">HOME</string>
    <string name="menu_drawer_evento">Crear evento</string>
    <string name="menu_drawer_usuarios">Usuarios</string>
    <string name="menu_drawer_perfil">Mi perfil</string>
    <string name="menu_drawer_calendario">Mi calendario</string>
    <string name="menu_drawer_saldo">Ingresar saldo</string>
    <string name="menu_drawer_ajustes">Ajustes</string>
    <string name="menu_drawer_logout">Logout</string>
    <string name="title_activity_httpmethods">HTTPMethodsActivity</string>
    <string name="textoCategorias">Debes elegir una categoría</string>
    <string-array name="Categorias">
        <item>Artistico</item>
        <item>Automobilistico</item>
        <item>Cinematografico</item>
        <item>Deportivo</item>
        <item>Gastronomico</item>
        <item>Literario</item>
        <item>Moda</item>
        <item>Musical</item>
        <item>Otros</item>
        <item>Politico</item>
        <item>Teatral</item>
        <item>Tecnologico y cientifico</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_maps">Map</string>
</resources>
